--- a/PatholabWorkList/PatholabWorkList.csproj
+++ b/PatholabWorkList/PatholabWorkList.csproj
@@ -44,6 +44,10 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
       <HintPath>..\..\..\..\Program Files (x86)\Thermo\Nautilus\Interop.LSSERVICEPROVIDERLib.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.DataAccess, Version=2.112.3.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DLLS\Oracle.DataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="Oracle.ManagedDataAccess, Version=4.122.19.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\DLLS\Oracle.ManagedDataAccess.dll</HintPath>
@@ -323,8 +327,8 @@
     <None Include="Resources\Rescan.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\clinicalDetailsIcon.png" />
     <Resource Include="Resources\scannedReferenceIcon.png" />
+    <Resource Include="Resources\clinicalDetailsIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
